# aenet-PyTorch

./: README.md
aenet_modified/: CMakeLists.txt  apply_patch.sh  make_patch.sh  src.patch
aenet_modified/src_modified/: Makefile.inc  aenet.f90  aenet.h  generate.f90  generate_MPI.F90  makeKANdescriptors.f90  parallel.F90  potential.f90  predict.F90  pytorchoutput_MPI.f90  sfsetup.f90  sub_generate.f90  sub_generate_MPI.f90  sub_makeKANdescriptors.f90  sub_nnASCII2bin.f90  sub_trainbin2ASCII.f90  trainbin2ASCII_modified.f90  trainset_MPI.f90
aenet_modified/src_modified/ext/: KAN.f90  chebyshev.f90  sfbasis.f90
aenet_modified/src_modified/makefiles/: Makefile.ifort_intelmpi
